@@ -41,7 +41,7 @@
   000b65b5e1d1c9a0bf3fcb08e08d73cd952f3963 2012073100 msys-dash.xml
   dcce1ddf19a9c305adb350e958de55676cf69112 2012073100 msys-diffstat.xml
   5cc54287970aca239fc154e9b46c988ef57b5c9a 2012073100 msys-diffutils.xml
-  e44bbdfa99fda09ffc29d5eba29987690be8a19a 2013012700 msys-dos2unix.xml
+  773bd6300b0c9b148bff3afe2b4363e1f96e3eab 2014011000 msys-dos2unix.xml
   2654c6f215facbc7aa9a7391a76e9f626ee2188c 2012073100 msys-expat.xml
   2a9bc928f054128d683e2f07e11aa5c73271eb82 2012073100 msys-file.xml
   43501d0b51f801f6ee2b124c361b20223fcfeff2 2012073100 msys-findutils.xml
@@ -73,7 +73,7 @@
   ec0f6517ee5afb3d8f4887dd0061b558604fd3f5 2012073100 msys-mktemp.xml
   243df0057053eebc442d922dff075e09fb579805 2012073100 msys-openssh.xml
   0103c79956ba9fa128755cd93374f0fc334c7cf6 2012073100 msys-openssl.xml
-  0defc38585dbedbe010d82bdf6e4dbbae8fb1398 2013102800 msys-package-list.xml
+  0defc38585dbedbe010d82bdf6e4dbbae8fb1398 2014011000 msys-package-list.xml
   d19e1e39e5fab25a3d40acb92b98b40a60b0da90 2012073100 msys-patch.xml
   d4f194d2e95035da2b712c54053fb6ad5d45e1d9 2013101200 msys-perl.xml
   19ddf46e23e23010a440af1b423d986712c3bda7 2012073100 msys-popt.xml
