@@ -1,3 +1,9 @@
+2014-01-10  Erwin Waterlander  <waterlan@xs4all.nl>
+
+	* msys/msys-dos2unix.xml: Updated for dos2unix version 6.0.4.
+	* msys/issue.log: Updated accordingly.
+	* common/issue.log: Update accordingly.
+
 2013-11-01  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Correct MPC requirements references to nonexistent MPFR package.
